k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: java-frontend-production
  labels:
    app: java-frontend-production
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - java-frontend-production.35.185.40.222.nip.io
    secretName: java-frontend-production-tls
  rules:
  - host: java-frontend-production.35.185.40.222.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: java-frontend-production
          servicePort: 5000
